--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,7 +54,7 @@ jobs:
         run: cargo clippy --all-targets --all-features --tests --benches -- -D warnings
 
       - name: Execute rust tests
-        run: cargo nextest run --all-features
+        run: cargo nextest run --all-features --workspace --no-tests pass
 
   release:
     name: Release
